--- a/survey.tex
+++ b/survey.tex
@@ -515,6 +515,13 @@ obscure facts and progressing to more obvious identifications.
 vector embedding models to align vector embeddings of the entities
 and the sentences describing them.
 
+We must also mention that modern personal assistants like Siri and Cortana
+include some form of question answering.
+Many of the common questions in TREC and WebQuestions are also answerable
+by the Wolfram Alpha engine, as well as the QA component of Google Search
+(where an actual answer appears, not just relevant search results).
+Performance of these systems on any well known dataset has not been
+published to our knowledge, though.
 
 
 
