--- a/intro.tex
+++ b/intro.tex
@@ -17,8 +17,7 @@ is improving the state-of-art in the field of factoid question answering.
 My main results so far have been
 building an extensive question answering system \textbf{YodaQA} \citep{YodaQAPoster2015}
 and proposing a high-quality dataset \citep{YodaQACLEF2015},
-but I have also applied the system to a biological QA domain \citep{YodaQABioASQ2015}
-and achieved some new results not published yet (described later in the proposal).
+but I have also for example applied the system to a biological QA domain \citep{YodaQABioASQ2015}.
 This research is primarily supervised by Dr. Jan Šedivý;
 some of the newest results have been achieved while collaborating
 with intern students in our group.
