--- a/qa.bib
+++ b/qa.bib
@@ -349,7 +349,7 @@
   publisher={IOS Press}
 }
 
-@inproceedings{freebase,
+@inproceedings{Freebase,
   title={Freebase: a collaboratively created graph database for structuring human knowledge},
   author={Bollacker, Kurt and Evans, Colin and Paritosh, Praveen and Sturge, Tim and Taylor, Jamie},
   booktitle={Proceedings of the 2008 ACM SIGMOD international conference on Management of data},
