--- a/survey.tex
+++ b/survey.tex
@@ -29,7 +29,7 @@ We do not consider this branch of research further.
 QALD is much richer field of research, with yearly challenges \citep{QALD} and
 popular reference datasets Free917 \citep{Free917} and WebQuestions \citep{WebQuestions}.%
 \footnote{In the past, closed-domain datasets like GeoQuery were also popular.}
-The reference knowledge base is typically Freebesa \citep{Freebase},
+The reference knowledge base is typically Freebase \citep{Freebase},
 which holds a large amount of open domain real-world facts.%
 \footnote{Freebase has been phased out into legacy state at this point.
 	WikiData is set to replace it, but the migration of knowledge
