--- a/work.tex
+++ b/work.tex
@@ -80,7 +80,7 @@ as outlined in the Introduction --- answering open domain
 factoid questions, producing a narrowly phrased answer.
 We base the answers on information retrieval from both
 unstructured (English Wikipedia --- \textit{enwiki})
-and structured (DBpedia \citep{dbpedia}, Freebase \citep{freebase})
+and structured (DBpedia \citep{dbpedia}, Freebase \citep{Freebase})
 knowledge bases.
 
 In our pipeline, we build on existing third-party NLP analysis tools,
