--- a/qa.bib
+++ b/qa.bib
@@ -274,7 +274,6 @@
   booktitle={HLT-NAACL},
   pages={858--867},
   year={2013},
-  %organization={Citeseer},
   url={http://cs.jhu.edu/~xuchen/paper/yao-jacana-qa-naacl2013.pdf}
 }
 
@@ -284,7 +283,6 @@
   booktitle={ACL (2)},
   pages={159--165},
   year={2013},
-  organization={Citeseer},
   url={http://cs.jhu.edu/~xuchen/paper/yao-jacana-ir-acl2013.pdf}
 }
 
@@ -304,8 +302,7 @@
   address   = {Denver, Colorado},
   publisher = {Association for Computational Linguistics},
   pages     = {66--70},
-  url       = {http://www.aclweb.org/anthology/N15-3014},
-	url={http://www.cs.jhu.edu/~xuchen/paper/scratch-qa.pdf}
+  url       = {http://www.aclweb.org/anthology/N15-3014}
 }
 
 @article{FreebaseQA2014Yao,
@@ -336,9 +333,10 @@
 }
 
 @misc{OpenQA,
-  title = {{openQA}: Open Source Question Answering Framework}
+  title = {{openQA}: Open Source Question Answering Framework},
   author = {Marx, Edgard},
-  howpublished = {\url{http://aksw.org/Projects/openQA.html}}
+  year={2014},
+  url={http://aksw.org/Projects/openQA.html}
 }
 
 @article{dbpedia,
@@ -446,6 +444,17 @@ shareable analysis pipelines},
 	url={http://ailao.eu/yodaqa/yodaqa-poster2015.pdf}
 }
 
+@inproceedings{YodaQACLEF2015,
+	title={{YodaQA: A Modular Question Answering System Pipeline}},
+	booktitle={{Sixth International Conference of the CLEF Association, CLEF'15, Toulouse, September 8-11, 2015}},
+	author={Baudiš, Petr},
+	series={{LNCS}},
+	year={2015},
+	volume={9283},
+	publisher={Springer},
+	location={Heidelberg}
+}
+
 @article{MicrosoftWQ2014,
 	title={An Overview of Microsoft Deep QA System on Stanford WebQuestions Benchmark},
 	author={Wang, Zhenghao and Yan, Shengquan and Wang, Huaming and Huang, Xuedong},
@@ -549,7 +558,7 @@ shareable analysis pipelines},
 @article{SPKwiatkowski2013,
   title={Scaling semantic parsers with on-the-fly ontology matching},
   author={Kwiatkowski, Tom and Choi, Eunsol and Artzi, Yoav and Zettlemoyer, Luke},
-  publisher={Citeseer},
+  year={2013},
   url={http://www.aclweb.org/anthology/D13-1161.pdf}
 }
 
@@ -569,7 +578,6 @@ shareable analysis pipelines},
   booktitle={ACL (1)},
   pages={423--433},
   year={2013},
-  organization={Citeseer}
 }
 
 @article{SPIntro,
@@ -670,4 +678,67 @@ shareable analysis pipelines},
   pages={3111--3119},
   year={2013},
   url={http://papers.nips.cc/paper/5021-di}
+}
+
+@article{LISA,
+	title={Neural machine translation by jointly learning to align and translate},
+	author={Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
+	journal={arXiv preprint arXiv:1409.0473},
+	year={2014},
+	url={http://arxiv.org/abs/1409.0473}
+}
+
+@article{ShowAndTell,
+	title={Show and tell: A neural image caption generator},
+	author={Vinyals, Oriol and Toshev, Alexander and Bengio, Samy and Erhan, Dumitru},
+	journal={arXiv preprint arXiv:1411.4555},
+	year={2014},
+	url={http://arxiv.org/abs/1411.4555}
+}
+
+@article{WatsonEvidence,
+  title={Textual evidence gathering and analysis},
+  author={Murdock, J William and Fan, James and Lally, Adam and Shima, Hideki and Boguraev, BK},
+  journal={IBM Journal of Research and Development},
+  volume={56},
+  number={3.4},
+  pages={8--1},
+  year={2012},
+  publisher={IBM},
+  url={http://brenocon.com/watson_special_issue/08%20textual%20evidence%20gatherint.pdf}
+}
+
+@inproceedings{SentimentRNTN,
+  title={Recursive deep models for semantic compositionality over a sentiment treebank},
+  author={Socher, Richard and Perelygin, Alex and Wu, Jean Y and Chuang, Jason and Manning, Christopher D and Ng, Andrew Y and Potts, Christopher},
+  booktitle={Proceedings of the conference on empirical methods in natural language processing (EMNLP)},
+  volume={1631},
+  pages={1642},
+  year={2013},
+  url={http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.383.1327&rep=rep1&type=pdf}
+}
+
+@inproceedings{WordVecLingReg,
+  title={Linguistic Regularities in Continuous Space Word Representations.},
+  author={Mikolov, Tomas and Yih, Wen-tau and Zweig, Geoffrey},
+  year={2013},
+  url={http://www.aclweb.org/anthology/N13-1#page=784}
+}
+
+@article{Glove,
+  title={Glove: Global vectors for word representation},
+  author={Pennington, Jeffrey and Socher, Richard and Manning, Christopher D},
+  journal={Proceedings of the Empiricial Methods in Natural Language Processing (EMNLP 2014)},
+  volume={12},
+  pages={1532--1543},
+  year={2014},
+  url={http://llcao.net/cu-deeplearning15/presentation/nn-pres.pdf}
+}
+
+@inproceedings{DistReprComp,
+	title={Distributed representations of words and phrases and their compositionality},
+	author={Mikolov, Tomas and Sutskever, Ilya and Chen, Kai and Corrado, Greg S and Dean, Jeff},
+	booktitle={Advances in neural information processing systems},
+	pages={3111--3119},
+	year={2013}
 }
