--- a/work.tex
+++ b/work.tex
@@ -99,9 +99,9 @@ instead relying just on fully-learned universal mechanisms;
 we use just about 10 hard-coded rules at this point, mostly
 in question analysis.
 
-For a practical illustration of the pipeline processing
-two particular example questions,
-see Appendix~\ref{app:analysis}.
+%For a practical illustration of the pipeline processing
+%two particular example questions,
+%see Appendix~\ref{app:analysis}.
 
 
 \begin{figure}[hb]
