Remove remaining TODOs

--- a/concl.tex
+++ b/concl.tex
@@ -4,7 +4,8 @@
 In this report, I have proposed a doctoral thesis on the topic
 of factoid question answering.
 So far, I have built a question answering system that exhibits
-TODO performance and is still rapidly improving.  I have also
+performance more than comparable with well-known baselines
+and is still rapidly improving.  I have also
 managed to reproduce state-of-art results in some of the sub-tasks
 and identified and proposed a few tasks on my own that are tied
 to building a state-of-art system in a real-world setting.
