Fix remaining cite problems

--- a/odbstud.tex
+++ b/odbstud.tex
@@ -42,6 +42,12 @@
 	QA research.
 \end{abstract}
 
+% errata:
+% - missing answer F1 for YodaQA on WebQuestions
+% - in survey, missing descriptions of more unstructured and other systems,
+%   and entity linking survey; in general, the survey should be considered preliminary, developed in https://github.com/brmson/qasurvey
+% - YodaQA description not completely up-to-date! label-lookup, decforests with entity classification
+
 \tableofcontents
 
 \include{intro}
