--- a/qa.bib
+++ b/qa.bib
@@ -81,6 +81,14 @@
   url={http://www.cs.colorado.edu/~jbg/docs/2014_emnlp_qb_rnn.pdf}
 }
 
+@article{YodaQABioASQ2015,
+  title={Modeling of the Question Answering Task in the YodaQA System},
+  author={Baudi{\v{s}}, Petr and {\v{S}}ediv{\`y}, Jan},
+  booktitle={BioASQ@ CLEF},
+  year={2015},
+  url={http://ceur-ws.org/Vol-1391/131-CR.pdf}
+}
+
 @inproceedings{SurveyWang,
   title={A survey of answer extraction techniques in factoid question answering},
   author={Wang, Mengqiu},
@@ -741,4 +749,92 @@ shareable analysis pipelines},
 	booktitle={Advances in neural information processing systems},
 	pages={3111--3119},
 	year={2013}
+}
+
+@article{WatsonRelEx,
+  title={Relation extraction and scoring in DeepQA},
+  author={Wang, Chang and Kalyanpur, Aditya and Fan, James and Boguraev, Branimir K and Gondek, DC},
+  journal={IBM Journal of Research and Development},
+  volume={56},
+  number={3.4},
+  pages={9--1},
+  year={2012},
+  publisher={IBM}
+}
+
+@article{WatsonIntro,
+  title={Introduction to “this is watson”},
+  author={Ferrucci, David A},
+  journal={IBM Journal of Research and Development},
+  volume={56},
+  number={3.4},
+  pages={1--1},
+  year={2012},
+  publisher={IBM}
+}
+
+@article{BergamaschiKeymantic,
+  title={Keymantic: semantic keyword-based searching in data integration systems},
+  author={Bergamaschi, Sonia and Domnori, Elton and Guerra, Francesco and Orsini, Mirko and Lado, Raquel Trillo and Velegrakis, Yannis},
+  journal={Proceedings of the VLDB Endowment},
+  volume={3},
+  number={1-2},
+  pages={1637--1640},
+  year={2010},
+  publisher={VLDB Endowment},
+  url={http://disi.unitn.it/~velgias/docs/BergamaschiDGOLV10.pdf}
+}
+
+@article{BlunschiSODA,
+  title={Soda: Generating sql for business users},
+  author={Blunschi, Lukas and Jossen, Claudio and Kossmann, Donald and Mori, Magdalini and Stockinger, Kurt},
+  journal={Proceedings of the VLDB Endowment},
+  volume={5},
+  number={10},
+  pages={932--943},
+  year={2012},
+  publisher={VLDB Endowment},
+  url={http://arxiv.org/pdf/1207.0134.pdf}
+}
+
+@inproceedings{TREC8,
+  title={The TREC-8 Question Answering Track Report.},
+  author={Voorhees, Ellen M and others},
+  booktitle={TREC},
+  volume={99},
+  pages={77--82},
+  year={1999},
+  url={http://trec.nist.gov/pubs/trec8/papers/qa_report.pdf}
+}
+
+@inproceedings{TREC9,
+  title={Overview of the TREC-9 Question Answering Track.},
+  author={Voorhees, Ellen M and Tice, DM},
+  booktitle={TREC},
+  year={2000},
+  url={http://trec.nist.gov/pubs/trec9/papers/qa_overview.pdf}
+}
+
+@article{TREC10,
+  title={Overview of the TREC 2001 Question Answering Track.},
+  author={Voorhees, Ellen M and Tice, DM},
+  booktitle={TREC},
+  year={2001},
+  url={http://trec.nist.gov/pubs/trec10/papers/qa10.pdf}
+}
+
+@inproceedings{TREC11,
+  title={Overview of the TREC 2002 Question Answering Track},
+  author={Voorhees, Ellen M},
+  booktitle={In Proceedings of the Eleventh Text REtrieval Conference (TREC)},
+  year={2002},
+  url={http://trec.nist.gov/pubs/trec11/papers/QA11.pdf}
+}
+
+@article{TREC12,
+  title={Overview of the TREC 2003 Question Answering Track.},
+  author={Voorhees, Ellen M},
+  booktitle={TREC},
+  year={2003},
+  url={http://trec.nist.gov/pubs/trec12/papers/QA.OVERVIEW.pdf}
 }
