--- a/survey.tex
+++ b/survey.tex
@@ -10,7 +10,7 @@ a web search).
 
 Below, we survey the recent activity in these fields.
 For a historical viewpoint, we refer the reader to
-\cite{SurveyWang}, \cite{SurveyAllam} and \cite{SurveyLopeza}.
+\cite{SurveyWang}, \cite{SurveyAllam} and \cite{SurveyLopez}.
 
 
 \section{Structured Data QA}
@@ -26,7 +26,7 @@ evaluate results --- most research concerns building auxiliary systems
 that augment human database experts. \citep{BergamaschiKeymantic, BlunschiSODA}
 We do not consider this branch of research further.
 
-QALD is much richer field of research, with yearly challenges \citep{QALD} and
+QALD is much richer field of research, with yearly challenges \citep{QALD4} and
 popular reference datasets like Free917 \citep{SPCai2013} and WebQuestions \citep{Semantic2013Berant}.%
 \footnote{In the past, closed-domain datasets like GeoQuery were also popular.}
 The reference knowledge base is typically Freebase \citep{Freebase},
@@ -300,7 +300,7 @@ and parsers using different datasets like WikiAnswers \cite{Fader2013Paraphrase}
 	with a generative model for embeddings alignment (similar
 	to \cite{Yu2014Deep} described in detail in Sec.~\ref{sec:anssentsel}).
 	WebQuestions+Freebase accuracy is reported to be $39.9\%$.
-	\cite{Semantic2014Borders} reports that F$_1$ (Yao) is $43.0\%$.
+	\cite{Semantic2014Bordes} reports that F$_1$ (Yao) is $43.0\%$.
 
 \textbf{Semantic Parsing via Staged Query Graph Generation: Question Answering with Knowledge Base (STAGG)} \citep{STAGG}
 	produces the logical forms of questions in the form of subgraph templates
