Figure appearance tweaking

--- a/work.tex
+++ b/work.tex
@@ -401,7 +401,7 @@ MRR is the Mean Reciprocal Rank $|Q|\cdot\sum_{q\in Q}{1/r_q}$.}
 \begin{figure}[ht]
 \begin{center}
 \resizebox{85mm}{!}{\includegraphics{ranks.eps}}
-\vspace*{-0.75cm}
+%\vspace*{-0.75cm}
 \caption{Number of questions $x$ that output the correct answer ranked at least $y$.}
 \label{fig:ranks}
 \end{center}
@@ -453,8 +453,8 @@ OQA \citep{OQA} (modern fully-learned OSS) & --- & 29\%$^{**}$ & --- \\ \hline
 \hline
 \end{tabular}
 \vspace*{-0.2cm}
-\caption{Benchmark results of some relevant systems on the unmodified TREC dataset.\qquad
-$^{*}$ MIT99 subset;
+\caption{Benchmark results of some relevant systems on the unmodified TREC dataset. \\
+$^{*}$ MIT99 subset; \quad
 $^{**}$ sub-sampled dataset with manual evaluation}
 \label{fig:trecbench}
 \end{figure}
